Criando um menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= link_to "Anotações", notes_path   %>
+  
+       <%= render "base/menu" %>
       <%= yield %>
-    </main>
+    
   </body>
 </html>
