--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/notes/index.html.erb -->
-<h1>Todas as Notas</h1>
+<h1 class="text-center m-5">Todas as Notas</h1>
 
 <% @notes.each do |note| %>
   <h3><%= link_to note.title, note %></h3>
