--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/notes/new.html.erb -->
-<h1>Nova Nota</h1>
+<h1 class="bg-black text-white text-center m-5 p-10 rounded-md " >Nova Nota</h1>
 
 <%= render 'form' %>
 
