--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,18 +4,21 @@
 
 <div class="flex flex-wrap">
   <% @notes.each do |note| %>
-    <div class="box-content h-32 w-32 p-4 border-4 m-2 rounded-md">
-      <h5 class=" bg-black text-white">
-            <%= link_to note.title, note %>
-          </h5>
-          <%= note.content %>
-          <%= link_to 'Editar', edit_note_path(note) %> |
-            <%= link_to 'Excluir', note, method: :delete, data: { confirm: 'Tem certeza?' } %>
-          </p>
-          <!-- Adiciona um ícone de check se a nota estiver concluída -->
-          <%= note.completed ? image_tag("https://img.freepik.com/vetores-premium/icone-colorido-feito-ok-concluido-pronto_890735-37.jpg?w=2000", alt: "Concluída") : "ooooo" %>
-        </div>
-    <% end %>
+    <div class="box-content h-32 w-32 p-4 border-4 m-2 rounded-md <%= note.completed ? 'bg-green-500' : 'bg-red-500' %>">
+      <h5 class="bg-black text-white">
+        <%= link_to note.title, note %>
+      </h5>
+      <%= note.content %>
+      <%= link_to 'Editar', edit_note_path(note) %> |
+      <%= link_to 'Excluir', note, method: :delete, data: { confirm: 'Tem certeza?' } %>
+
+      <% if note.completed %>
+        <%= "Nota completa" %>
+      <% else %>
+        <%= "Nota não completa" %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
 
 <hr>
@@ -23,4 +26,3 @@
 <button class="text-center m-5 bg-black text-white rounded-md p-5 m-20">
   <%= link_to 'Nova Nota', new_note_path %>
 </button>
-
