--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,14 @@
   </head>
 
   <body>
-  
-       <%= render "base/menu" %>
+
+      <%= render "base/menu" %>
+      <% flash.each do |type, msg| %>
+        <div class="<%= type %> bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3" role="alert">
+          <p class="font-bold">Informação</p>
+          <p class="text-sm"><%= msg %></p>
+        </div>
+      <% end %>
       <%= yield %>
       <%= render "base/foooter" %>
     
