--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,5 +1,6 @@
 <!-- app/views/notes/edit.html.erb -->
-<h1>Editar Nota</h1>
+<h1 class="bg-black text-white text-center m-5 p-10 rounded-md">Editar tarefa</h1>
+
 
 <%= render 'form' %>
 
