--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -2,11 +2,6 @@
 
 <h1 class="bg-black text-white text-center m-5 p-10 rounded-md">Todas as Notas</h1>
 
-
-<hr>
-
-
-
 <div class="flex flex-wrap">
   <% @notes.each do |note| %>
   <div class="max-w-sm rounded overflow-hidden shadow-lg p-4  m-2 rounded-md  <%= note.completed ? 'bg-green-500' : 'bg-red-500' %>">
@@ -20,25 +15,19 @@
     </p>
   </div>
   <div class="px-6 pt-4 pb-2">
-    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%= link_to 'Excluir', note, method: :delete, data: { confirm: 'Tem certeza?' } %>
+  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">  <%= link_to 'Editar', edit_note_path(note) %> 
+  </span>
+  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%= link_to 'Excluir', note, method: :delete, data: { confirm: 'Tem certeza?' } %>
     </span>
     <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%= button_to "Atualizar", note_path(note), method: :patch, data: { confirm: 'Tem certeza?' } %>
     </span>
   </div>
 </div>
-    <div class="">
-      <h5 class="bg-black text-white"></h5>
-
-      
-     
-
-     
-
-    </div>
+    
   <% end %>
 </div>
 
-
-  <button class="text-center m-5 bg-black text-white rounded-md p-5 m-20">
-  <%= link_to 'Nova Nota', new_note_path %>
-</button>
+    <
+    <button type="button" class="text-white bg-black hover:bg-black focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">    <%= link_to 'Nova Nota', new_note_path %>
+    </button>
+    
