--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -12,5 +12,9 @@
     <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">  <%= link_to "Apagar", note_path(@note), data: {  turbo_method: :delete, turbo_confirm: "Are you sure?" } %></li>
     </span>
     <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%= link_to 'Voltar', notes_path %></span>
+
+    
+    </span>
+
   </div>
   </div>
